feat: 주간설정 조회시 없으면 isActive=false로 반환